--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   },
   "private": true,
   "dependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "react": "^17",
-    "react-dom": "^17",
-    "tailwindcss": "^2"
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "latest"
   },
   "devDependencies": {
-    "@types/react": "^17",
-    "@types/react-dom": "^17",
-    "@vitejs/plugin-react-refresh": "^1",
-    "eslint": "^7.32.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7",
-    "prettier": "^2",
-    "prettier-plugin-organize-imports": "^2",
-    "pretty-quick": "^3",
-    "typescript": "^4",
-    "vite": "^2"
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@vitejs/plugin-react-refresh": "latest",
+    "eslint": "latest",
+    "eslint-config-react-app": "latest",
+    "eslint-plugin-react-hooks": "latest",
+    "husky": "latest",
+    "prettier": "latest",
+    "prettier-plugin-organize-imports": "latest",
+    "pretty-quick": "latest",
+    "typescript": "latest",
+    "vite": "latest"
   }
 }
