--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
   },
   "private": true,
   "dependencies": {
-    "autoprefixer": "latest",
-    "postcss": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "latest"
+    "tailwind-merge": "latest"
   },
   "devDependencies": {
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react-refresh": "latest",
+    "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-react-app": "latest",
     "eslint-plugin-react-hooks": "latest",
     "husky": "latest",
+    "postcss": "latest",
     "prettier": "latest",
     "prettier-plugin-organize-imports": "latest",
     "pretty-quick": "latest",
+    "tailwindcss": "latest",
     "typescript": "latest",
     "vite": "latest"
   }
